src/components/Announcements/index.module.scss
@use '@scss/common' as *;

.announcementWrap {
  position: fixed;
  bottom: 0;
  width: 100%;
  z-index: var(--z-nav);
}

.announcement {
  position: relative;
  display: flex;
  padding: calc(var(--base) * 0.5) calc(var(--gutter-h) / 2);
  transition: color 300ms ease;
  border-bottom: 1px solid var(--theme-success-500);
  color: var(--theme-success-500);

  &:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--theme-success-100);
    opacity: 0.95;
    z-index: -1;
    transition: opacity 500ms ease-out;
  }

  &:after {
    content: '';
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(5px);
    z-index: -1;
    opacity: 1;
    transition: opacity 500ms ease-out;
  }

  .richText {
    display: flex;
    align-items: center;

    & a:visited,
    & a {
      color: var(--theme-success-500);
      transition: all 0.2s ease;

      &:hover {
        color: var(--theme-success-500);
        opacity: 0.7;
      }
    }
  }

  .arrow {
    margin-left: calc(var(--base) / 2);
    width: calc(var(--base) * 0.55);
    height: calc(var(--base) * 0.55);
  }

  .close {
    @include btnReset;
    margin-left: auto;
    padding-left: calc(var(--base) * 0.5);
    cursor: pointer;

    & svg {
      width: calc(var(--base) * 0.9);
      height: calc(var(--base) * 0.9);
      border-radius: 100%;
      background-color: var(--theme-success-500);
      transition: all 0.2s ease;
    }

    & rect {
      fill: var(--theme-success-100);
    }

    &:hover {
      & svg {
        opacity: 0.7;
      }
    }
  }

  @include large-break {
    padding-left: var(--gutter-h);
    padding-right: var(--gutter-h);
  }

  @include small-break {
    .arrow {
      display: none;
    }
  }
}

[data-theme=light] {
  .announcement {
    color: black;

    &:before {
      background-color: var(--theme-success-500);
    }

    & a,
    & a:visited {
      color: black;

      &:hover {
        color: black;
        opacity: 0.7;
      }
    }
  }

  .close {
    & svg {
      background-color: black;
    }

    & rect {
      fill: var(--theme-success-500);
    }
  }
}

